         The format conversion from prior releases is handled transparently,
	 but releases older than 1.4.12/1.6.5 will not understand this new
	 format.  The automatic format conversion can be avoided by running
	 the following command on the MDS before upgrading:
		'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV'.
	 For more information, please refer to bugzilla 13904.

Severity   : critical
Frequency  : very rare, if additional xattrs are used on kernels >= 2.6.12
Bugzilla   : 15777
Description: MDS may lose file striping (and hence file data) in some cases
Details    : If there are additional extended attributes stored on the MDS,
	     in particular ACLs, SELinux, or user attributes (if user_xattr
	     is specified for the client mount options) then there is a risk
	     of attribute loss.  Additionally, the Lustre file striping
	     needs to be larger than default (e.g. striped over all OSTs),
	     and an additional attribute must be stored initially in the
	     inode and then increase in size enough to be moved to the
	     external attribute block (e.g. ACL growing in size) for file
	     data to be lost.

Severity   : enhancement
Bugzilla   : 12191
Description: add message levels for liblustreapi

Severity   : normal
Frequency  : rare
Bugzilla   : 13380
Description: MDT cannot be unmounted, reporting "Mount still busy"
Details	   : Mountpoint references were being leaked during open reply
	     reconstruction after an MDS restart.  Drop mountpoint reference
	     in reconstruct_open() and free dentry reference also.

Severity   : minor
Frequency  : rare
Bugzilla   : 13380
Description: fix for occasional failure case of -ENOSPC in recovery-small tests 
Details    : Move the 'good_osts' check before the 'total_bavail' check.  This 
	     will result in an -EAGAIN and in the exit call path we call 
	     alloc_rr() which will with increasing aggressiveness attempt to 
	     aquire precreated objects on the minimum number of required OSCs.
